# xrpa_core

./: .gitignore  .pylintrc  alembic.ini  config.yml  pyproject.toml  readme.md  requirements-packaging.txt  requirements.txt
alembic/: env.py
disttest/: xrpa_core-0.1.0-py3-none-any.whl
src/xrpa_core/: __init__.py  __main__.py
src/xrpa_core/config/: __init__.py  config.py
src/xrpa_core/core/: logger.py
src/xrpa_core/crawler/api/: base.py
src/xrpa_core/crawler/js/: tiktok_fetch.js
src/xrpa_core/dao/: kv_dao.py
src/xrpa_core/db/: __init__.py  models.py  scm.py
src/xrpa_core/entity/: zb_credential.py
src/xrpa_core/excel_importer/: __init__.py  cleaners.py  importer.py
src/xrpa_core/feishu/: __init__.py  excel_utils.py  feishu_api_base.py  feishu_card.py  feishu_client.py  feishu_doc_exporter.py  feishu_notify.py  feishu_sheet.py  feishu_sync.py  feishu_update_utils.py  feishu_utils.py  robot.py
src/xrpa_core/feishu/card/: __init__.py  exception_card.py  export_apply_report.py  template.py  verify_stastics.py
src/xrpa_core/file/: __init__.py  dirs.py
src/xrpa_core/hyperv_manager/: __init__.py  hyperv_manager.py
src/xrpa_core/lib/: __init__.py  js_runner.py  ziniao_browser.py  ziniao_browser_v2.py
src/xrpa_core/service/: __init__.py  base.py  vmenv_service.py
src/xrpa_core/test/: test_env.py  test_export_large.py  test_inventory_service.py  test_notify.py  test_seller.py
src/xrpa_core/tools/: file.py  retry.py
src/xrpa_core/utils/: api.py  env.py  excel_to_db.py  jsonpath.py  page.py
src/xrpa_core/utils/data_cleaning/: posted_video.py
src/xrpa_core/utils/js/: get_aid.js
src/xrpa_core/x_framework/: x_config.py  x_date.py  x_db.py  x_excel.py  x_file.py  x_log.py  x_utils.py
tests/: test_package_smoke.py
