[project]
name = "xrpa_core"
version = "0.1.0"
description = "My project"
requires-python = ">=3.12"


[tool.setuptools.packages.find]
where = ["src"]
include = ["tkauto*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra", "-s"]
log_cli = true
log_cli_level = "INFO"

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import sort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
